# gammatrade

./: .gitignore  README.md  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json
automation/: README.md  __init__.py  analysis.py  analytics.py  eod_analysis.py  gates.py  journal.py  levels.py  orders.py  pregame.py  requirements.txt  risk.py  rules.py  secrets.py  server.py  state.py  tagging.py  telemetry.py  triggers.py
automation/config/: rules.yaml
automation/templates/: _analytics_tabs.html  _date_range_chips.html  _decision_card.html  _risk_panel.html  _settings_tabs.html  analytics_chains.html  analytics_cohort.html  analytics_ladders.html  analytics_leakage.html  analytics_levels.html  analytics_pnl.html  analytics_pregame.html  analytics_sectors.html  analytics_tickers.html  analytics_trades.html  analytics_trends.html  analytics_winners.html  base.html  broker.html  broker_dryrun.html  chains.html  dashboard.html  entry_accepted.html  entry_form.html  entry_rejected.html  journal_entry.html  journal_index.html  keys.html  kill.html  logs.html  playbooks.html  position_detail.html  positions.html  pregame_index.html  (+8 more)
commands/: gamma-eod.md  gamma-import-trades.md  gamma-pregame.md  gamma-start.md  gamma-stop.md  gamma-trigger.md
hooks/: post-install.sh
scripts/: append_td_exports.py  backfill_mfe_mae.py  build_reference_cohort.py  fix_tp_timestamps.py  import_broker_to_db.py  import_ibkr_to_db.py  load_reference_cohort.py
src/: bars_store.py  contract_symbols.py  enrich_trade.py  ibkr_reader.py  polygon_client.py  regime.py  td_reader.py
(+827 files in other folders)
