[project]
name = "gammatrade"
version = "0.3.1"
description = "Self-hosted options-trading dashboard with broker-CSV import, MFE/MAE analytics, and Claude Code integration."
authors = [{name = "paretotech"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["trading", "options", "analytics", "td-ameritrade", "ibkr"]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
ibkr = ["ib_insync>=0.9.86"]
api = ["anthropic>=0.39"]
dev = ["pytest>=7", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/paretotech/gammatrade"
Repository = "https://github.com/paretotech/gammatrade.git"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["automation", "src"]
